[package]
name = "aoc15"
version = "0.1.0"
edition = "2021"

[features]
EXCLUDE_SLOW_SOLUTIONS = []
OnlyLastPuzzle = []
default = ["EXCLUDE_SLOW_SOLUTIONS"]

[dependencies]
fancy-regex = "0.13.0"
itertools = "0.13.0"
log = "0.4.22"
md5 = "0.7.0"
regex = "1.11.0"
simplelog = "0.12.2"
ureq = "2.10.1"

[dev-dependencies]
ctor = "0.2.8"
